added more content to table

--- a/index.html
+++ b/index.html
@@ -67,11 +67,31 @@
                         <tr>
                             <td><i class="far fa-star"></i></td>
                             <td>Bananas</td>
+                            <td>1</td>
                             <td><i class="far fa-trash-alt"></i></td>
                         </tr>
                         <tr>
                             <td><i class="far fa-star"></i></td>
                             <td>Broccoli</td>
+                            <td>3</td>
+                            <td><i class="far fa-trash-alt"></i></td>
+                        </tr>
+                        <tr>
+                            <td><i class="far fa-star"></i></td>
+                            <td>Onions</td>
+                            <td>2</td>
+                            <td><i class="far fa-trash-alt"></i></td>
+                        </tr>
+                        <tr>
+                            <td><i class="far fa-star"></i></td>
+                            <td>Garlic</td>
+                            <td>1</td>
+                            <td><i class="far fa-trash-alt"></i></td>
+                        </tr>
+                        <tr>
+                            <td><i class="far fa-star"></i></td>
+                            <td>Oranges</td>
+                            <td>4</td>
                             <td><i class="far fa-trash-alt"></i></td>
                         </tr>
                     </table>
