switched to develop branch, added text fade to table

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h6>Recently Added to Basket:</h6>
                 </div>
             </div>
-            <div class="row text-center my-2">
+            <div class="row text-center my-2 recent-row" id="recent-table">
                 <div class="col-12">
                     <table class="table">
                         <tr>
@@ -94,6 +94,18 @@
                             <td>4</td>
                             <td><i class="far fa-trash-alt"></i></td>
                         </tr>
+                        <tr>
+                            <td><i class="far fa-star"></i></td>
+                            <td>Avocados</td>
+                            <td>2</td>
+                            <td><i class="far fa-trash-alt"></i></td>
+                        </tr>
+                        <tr>
+                            <td><i class="far fa-star"></i></td>
+                            <td>Strawberries</td>
+                            <td>1</td>
+                            <td><i class="far fa-trash-alt"></i></td>
+                        </tr>
                     </table>
                 </div>
             </div>
@@ -107,7 +119,14 @@
         </div>
         <footer class="footer" id="fixed-footer">
             <div class="container-fluid">
-                here
+                <div class="row text-center py-3">
+                    <div class="col-6">
+                        Add
+                    </div>
+                    <div class="col-6">
+                        Archive
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
