adjusted breakpoints on input section

--- a/index.html
+++ b/index.html
@@ -22,47 +22,47 @@
         </div>
         <div class="container-fluid" id="input-area">
             <div class="row text-center my-2">
-                <div class="col-12">
+                <div class="col col-xs-12 col-md-4">
                     <h4>Add an item:</h4>
                     <input type="text">
                 </div>
             </div>
             <div class="row text-center my-2">
-                <div class="col-12">
+                <div class="col col-xs-12 col-md-4">
                     <button class="mx-2">-</button><span>1</span><button class="mx-2">+</button>
                 </div>
             </div>
             <div class="row text-center my-2">
-                <div class="col-4">
+                <div class="col col-xs-4 col-md-1">
                     <button>Veg & Fruit</button>
                 </div>
-                <div class="col-4">
+                <div class="col col-xs-4 col-md-1">
                     <button>Front Shelves</button>
                 </div>
-                <div class="col-4">
+                <div class="col col-xs-4 col-md-1">
                     <button>Fridges</button>
                 </div>
             </div>
             <div class="row text-center my-2">
-                <div class="col-4">
+                <div class="col col-xs-4 col-md-1">
                     <button>Freezers</button>
                 </div>
-                <div class="col-4">
+                <div class="col col-xs-4 col-md-1">
                     <button>Middle Shelves</button>
                 </div>
-                <div class="col-4">
+                <div class="col col-xs-4 col-md-1">
                     <button>End Shelves</button>
                 </div>
             </div>
         </div>
         <div class="container-fluid" id="recently-added">
             <div class="row text-center my-2">
-                <div class="col-12">
+                <div class="col col-xs-12 col-md-4">
                     <h6>Recently Added to Basket:</h6>
                 </div>
             </div>
             <div class="row text-center my-2 recent-row" id="recent-table">
-                <div class="col-12">
+                <div class="col col-xs-12 col-md-4">
                     <table class="table">
                         <tr>
                             <td><i class="far fa-star"></i></td>
@@ -112,7 +112,7 @@
         </div>
         <div class="container-fluid" id="create">
             <div class="row text-center my-2">
-                <div class="col-12">
+                <div class="col col-xs-12 col-md-4">
                     <button type="button" class="btn btn-primary">Create Shopping List</button>
                 </div>
             </div>
