--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="row">
                         <div id="location-nav" class="bg-light p-2">
-                            <ul class="nav-buttons navtabs-buttons">
+                            <ul class="nav-buttons navtabs-buttons my-1">
                                 <li class="px-4">Fruit & Veg</li>
                                 <li class="px-4">Front Shelves</li>
                                 <li class="px-4">Fridges</li>
@@ -130,6 +130,36 @@
                                 <li class="px-4">Middle Shelves</li>
                                 <li class="px-4">End Shelves</li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-12">
+                            <table class="table">
+                                <tr class="table-row">
+                                    <td class="star"><i class="far fa-star"></i></td>
+                                    <td>Oranges</td>
+                                    <td>4</td>
+                                    <td><i class="far fa-trash-alt"></i></td>
+                                </tr>
+                                <tr class="table-row">
+                                    <td class="star"><i class="far fa-star"></i></td>
+                                    <td>Oranges</td>
+                                    <td>4</td>
+                                    <td><i class="far fa-trash-alt"></i></td>
+                                </tr>
+                                <tr class="table-row">
+                                    <td class="star"><i class="far fa-star"></i></td>
+                                    <td>Oranges</td>
+                                    <td>4</td>
+                                    <td><i class="far fa-trash-alt"></i></td>
+                                </tr>
+                                <tr class="table-row">
+                                    <td class="star"><i class="far fa-star"></i></td>
+                                    <td>Oranges</td>
+                                    <td>4</td>
+                                    <td><i class="far fa-trash-alt"></i></td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -140,7 +170,7 @@
 
 
 
-        <footer class="footer" id="fixed-footer">
+        <footer class="footer d-xs-block d-sm-none" id="fixed-footer">
             <div class="container-fluid">
                 <div class="row text-center py-3">
                     <div class="col-6">
