--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
     <title>Shoppr</title>
 </head>
     <body>
-        <div class="container-fluid" id="logo-header">
-            <div class="row">
-                <div class="col-12 text-center my-2">
-                    <h1>Shoppr</h1>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid" id="content"> 
+        <div class="container-fluid"> 
             <div class="row">
                 <div class="col-xs-12 col-sm-5">
+                    <div class="row text-center my-4">
+                        <div class="col-12">
+                            <h1>Shoppr <i class="fas fa-shopping-basket"></i></h1>
+                        </div>
+                    </div>
                     <div class="row text-center my-2">
                         <div class="col-12">
                             <h4>Add an item:</h4>
@@ -116,13 +114,13 @@
                     </div>
                 </div>
                 <!-- SHOPPING LIST -->
-                <div class="col-sm-7 d-none d-sm-block">
+                <div class="col-sm-7 d-none d-sm-block my-4">
                     <div class="row">
-                        <div id="banner-img"></div>
+                        <div id="banner-img" class="mr-3"></div>
                     </div>
                     <div class="row">
-                        <div id="location-nav" class="bg-light p-2">
-                            <ul class="nav-buttons navtabs-buttons my-1">
+                        <div id="location-nav" class="bg-light p-2 mr-3">
+                            <ul class="my-1">
                                 <li class="px-4">Fruit & Veg</li>
                                 <li class="px-4">Front Shelves</li>
                                 <li class="px-4">Fridges</li>
@@ -133,34 +131,32 @@
                         </div>
                     </div>
                     <div class="row text-center">
-                        <div class="col-12">
-                            <table class="table">
-                                <tr class="table-row">
-                                    <td class="star"><i class="far fa-star"></i></td>
-                                    <td>Oranges</td>
-                                    <td>4</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr class="table-row">
-                                    <td class="star"><i class="far fa-star"></i></td>
-                                    <td>Oranges</td>
-                                    <td>4</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr class="table-row">
-                                    <td class="star"><i class="far fa-star"></i></td>
-                                    <td>Oranges</td>
-                                    <td>4</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr class="table-row">
-                                    <td class="star"><i class="far fa-star"></i></td>
-                                    <td>Oranges</td>
-                                    <td>4</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                            </table>
-                        </div>
+                        <table class="table mr-3">
+                            <tr class="table-row">
+                                <td class="star"><i class="far fa-star"></i></td>
+                                <td>Oranges</td>
+                                <td>4</td>
+                                <td><i class="far fa-trash-alt"></i></td>
+                            </tr>
+                            <tr class="table-row">
+                                <td class="star"><i class="far fa-star"></i></td>
+                                <td>Oranges</td>
+                                <td>4</td>
+                                <td><i class="far fa-trash-alt"></i></td>
+                            </tr>
+                            <tr class="table-row">
+                                <td class="star"><i class="far fa-star"></i></td>
+                                <td>Oranges</td>
+                                <td>4</td>
+                                <td><i class="far fa-trash-alt"></i></td>
+                            </tr>
+                            <tr class="table-row">
+                                <td class="star"><i class="far fa-star"></i></td>
+                                <td>Oranges</td>
+                                <td>4</td>
+                                <td><i class="far fa-trash-alt"></i></td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
