made recently added hidden on desktop

--- a/index.html
+++ b/index.html
@@ -33,77 +33,79 @@
                         </div>
                     </div>
                     <div class="row text-center my-2">
-                        <div class="col-6">
-                            <button>Veg & Fruit</button>
+                        <div class="col-6 my-4">
+                            <span class="fruitveg location p-2">Fruit & Veg</span>
                         </div>
-                        <div class="col-6">
-                            <button>Front Shelves</button>
+                        <div class="col-6 my-4">
+                            <span class="frontshelves location p-2">Front Shelves</span>
                         </div>
-                        <div class="col-6">
-                            <button>Fridges</button>
+                        <div class="col-6 my-4">
+                            <span class="fridges location p-2">Fridges</span>
                         </div>
-                        <div class="col-6">
-                            <button>Freezers</button>
+                        <div class="col-6 my-4">
+                            <span class="freezers location p-2">Freezers</span>
                         </div>
-                        <div class="col-6">
-                            <button>Middle Shelves</button>
+                        <div class="col-6 my-4">
+                            <span class="middleshelves location p-2">Middle Shelves</span>
                         </div>
-                        <div class="col-6">
-                            <button>End Shelves</button>
+                        <div class="col-6 my-4">
+                            <span class="endshelves location p-2">End Shelves</span>
                         </div>
                     </div>
                     <!-- RECENTLY ADDED -->
-                    <div class="row text-center my-2" id="recently-added-title">
-                        <div class="col-12">
-                            <h6>Recently Added to Basket:</h6>
+                    <div class="container-fluid d-xs-block d-sm-none">
+                        <div class="row text-center my-2" id="recently-added-title">
+                            <div class="col-12">
+                                <h6>Recently Added to Basket:</h6>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row text-center my-2 recent-row" id="recent-table">
-                        <div class="col-12">
-                            <table class="table">
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Bananas</td>
-                                    <td>1</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Broccoli</td>
-                                    <td>3</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Onions</td>
-                                    <td>2</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Garlic</td>
-                                    <td>1</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Oranges</td>
-                                    <td>4</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Avocados</td>
-                                    <td>2</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-star"></i></td>
-                                    <td>Strawberries</td>
-                                    <td>1</td>
-                                    <td><i class="far fa-trash-alt"></i></td>
-                                </tr>
-                            </table>
+                        <div class="row text-center my-2 recent-row" id="recent-table">
+                            <div class="col-12">
+                                <table class="table">
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Bananas</td>
+                                        <td>1</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Broccoli</td>
+                                        <td>3</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Onions</td>
+                                        <td>2</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Garlic</td>
+                                        <td>1</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Oranges</td>
+                                        <td>4</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Avocados</td>
+                                        <td>2</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-star"></i></td>
+                                        <td>Strawberries</td>
+                                        <td>1</td>
+                                        <td><i class="far fa-trash-alt"></i></td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
 
