input values transfer to table, remove and favourite function added

--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
                     </div>
                     <div class="row text-center my-2">
                         <div class="col-6 my-3">
-                            <button class="fruitveg location addItem p-2">Fruit & Veg</button>
+                            <button class="fruitveg location add-item p-2">Fruit & Veg</button>
                         </div>
                         <div class="col-6 my-3">
-                            <button class="frontshelves location addItem p-2">Front Shelves</button>
+                            <button class="frontshelves location add-item p-2">Front Shelves</button>
                         </div>
                         <div class="col-6 my-3">
-                            <button class="fridges location addItem p-2">Fridges</button>
+                            <button class="fridges location add-item p-2">Fridges</button>
                         </div>
                         <div class="col-6 my-3">
-                            <button class="freezers location addItem p-2">Freezers</button>
+                            <button class="freezers location add-item p-2">Freezers</button>
                         </div>
                         <div class="col-6 my-3">
-                            <button class="middleshelves location addItem p-2">Middle Shelves</button>
+                            <button class="middleshelves location add-item p-2">Middle Shelves</button>
                         </div>
                         <div class="col-6 my-3">
-                            <button class="endshelves location addItem p-2">End Shelves</button>
+                            <button class="endshelves location add-item p-2">End Shelves</button>
                         </div>
                     </div>
                     <!-- RECENTLY ADDED -->
@@ -133,31 +133,13 @@
                         </div>
                     </div>
                     <div class="row text-center">
-                        <table class="table mr-3">
-                            <tr class="table-row">
-                                <td class="star"><i class="far fa-star"></i></td>
-                                <td>Oranges</td>
-                                <td>4</td>
-                                <td><i class="far fa-trash-alt"></i></td>
-                            </tr>
-                            <tr class="table-row">
-                                <td class="star"><i class="far fa-star"></i></td>
-                                <td>Oranges</td>
-                                <td>4</td>
-                                <td><i class="far fa-trash-alt"></i></td>
-                            </tr>
-                            <tr class="table-row">
-                                <td class="star"><i class="far fa-star"></i></td>
-                                <td>Oranges</td>
-                                <td>4</td>
-                                <td><i class="far fa-trash-alt"></i></td>
-                            </tr>
-                            <tr class="table-row">
-                                <td class="star"><i class="far fa-star"></i></td>
-                                <td>Oranges</td>
-                                <td>4</td>
-                                <td><i class="far fa-trash-alt"></i></td>
-                            </tr>
+                        <table id="table" class="table mr-3">
+                            <!-- <tr class="table-row">
+                                <td class="quantity-field red-line"></td>
+                                <td class="item-field"></td>
+                                <td class="favourite-field"><i class="far fa-star"></i></td>
+                                <td class="remove-field"><i class="far fa-trash-alt"></i></td>
+                            </tr> -->
                         </table>
                     </div>
                 </div>
